--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,81 @@
     padding: 5px;
     color: white;
 }
+
+main{
+    width: 50%;
+    margin: auto;
+}
+
+.container-main{
+    margin-top: 50px;
+    border: 1px solid black;
+    height: 500px;
+}
+
+.container-img {
+    height: 500px;
+    width: 340px;
+    position: relative;
+}
+
+.immagine1{
+    display: block;
+}
+
+.immagine2{
+    display: none;
+}
+
+.container-img:hover .immagine1 {
+    display: none;
+}
+
+.container-img:hover .immagine2 {
+    display: block;
+}
+
+img{
+    height: 500px;
+}
+
+
+.container-img .fa-heart{
+    position: absolute;
+    top:15px;
+    right: 15px;
+    font-size: 25px;
+}
+
+.fa-heart:hover{
+    color:red;
+}
+
+.tag-red{
+    height: 25px;
+    width: 50px;
+    background-color: red;
+    text-align: center;
+    position: absolute;
+    left: 0px;
+    bottom: 50px;
+}
+
+.tag-green{
+    text-align: center;
+    position: absolute;
+    left: 53px;
+    bottom: 50px;
+    height: 25px;
+    width: 90px;
+    background-color: green;
+    color: white;
+
+}
+.size,.color{
+    font-size: 12px;
+}
+
+.color{
+    color: red;
+}
