--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,16 @@ main{
 
 .container-main{
     margin-top: 50px;
-    border: 1px solid black;
     height: 500px;
+    display: flex;
+    justify-content: space-around;
+    
 }
 
 .container-img {
+    padding: 0px 20px;
+    margin: auto;
     height: 500px;
-    width: 340px;
     position: relative;
 }
 
@@ -84,7 +87,7 @@ img{
 .container-img .fa-heart{
     position: absolute;
     top:15px;
-    right: 15px;
+    right: 25px;
     font-size: 25px;
 }
 
@@ -98,14 +101,14 @@ img{
     background-color: red;
     text-align: center;
     position: absolute;
-    left: 0px;
+    left: 20px;
     bottom: 50px;
 }
 
 .tag-green{
     text-align: center;
     position: absolute;
-    left: 53px;
+    left: 73px;
     bottom: 50px;
     height: 25px;
     width: 90px;
@@ -119,4 +122,31 @@ img{
 
 .color{
     color: red;
+}
+
+
+.text{
+    display: inline-block;
+}
+
+.container-main2{
+    margin-top: 50px;
+    height: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 60px;
+    
+    
+}
+
+.special-green{
+    text-align: center;
+    position: absolute;
+    left: 20px;
+    bottom: 50px;
+    height: 25px;
+    width: 90px;
+    background-color: green;
+    color: white;
+
 }
