--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,21 @@
     box-sizing: border-box;
 }
 
+header{
+    top: 0;
+    height: 0;
+    position: fixed;
+    z-index: 1;
+}
 
 .container-header {
-    height: 100px;
     background-color: rgba(255, 105, 0, 255);
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    
 
 }
 
@@ -46,10 +54,12 @@
 main{
     width: 50%;
     margin: auto;
+    
+    
 }
 
 .container-main{
-    margin-top: 50px;
+    padding-top:90px;
     height: 500px;
     display: flex;
     justify-content: space-around;
@@ -130,7 +140,7 @@ img{
 }
 
 .container-main2{
-    margin-top: 50px;
+    padding-top: 90px;
     height: 500px;
     display: flex;
     justify-content: space-around;
@@ -150,6 +160,8 @@ img{
     color: white;
 
 }
+
+footer{padding-top: 90px;}
 
 .container-footer{
     margin-top: 100px;
